--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AngularMVC\packages.config" />
+  <repository path="..\Api.IOC.Registration\packages.config" />
+  <repository path="..\Repository\packages.config" />
   <repository path="..\WebApi\packages.config" />
 </repositories>
